--- a/naxui_nenuznaia_informatica.html
+++ b/naxui_nenuznaia_informatica.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Покупка игры Крестики-нолики</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+        }
+        .link {
+            margin-top: 20px;
+            font-size: 18px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Покупка игры Крестики-нолики</h1>
+        <p>Нажмите на ссылку ниже, чтобы скачать игру:</p>
+        <a href="https://drive.google.com/file/d/1E5wlHl9mHEMIM9HWvEujTemLbi4iYwFJ/view?usp=sharing" class="link">Скачать игру</a>
+    </div>
+</body>
+</html>
 
